--- a/galeriaarte-web/src/main/webapp/src/modules/clientes/delete/clientes.delete.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/clientes/delete/clientes.delete.html
@@ -11,9 +11,9 @@
     <div class="container" ng-if="isAuthenticated() && !hasPermissions()">
         <div class="row justify-content-center">
             <div class="col-md-12">
-                <h1 class="float-left display-3 mr-4">403 Forbidden</h1>
-                <h4 >You do not have permission for this action.</h4>
-                <p >Contact the administrator to obtain permission.</p>
+                <h1 class="float-left display-3 mr-4">403 Prohibido</h1>
+                <h4 >No tiene permisos para esta acción.</h4>
+                <p >Contactese con el administrador para obtener permisos.</p>
             </div>
         </div>
     </div>
