--- a/galeriaarte-web/src/main/webapp/src/modules/artistas/artistas.detail.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/artistas/artistas.detail.html
@@ -1,4 +1,4 @@
-
+<div class="panel "  > 
     <div class="panel-body" >
     <div class="row">
         <div class="col-md-3" >
@@ -76,5 +76,5 @@
               </div>
     </div>
         </div>
-
+</div>
 
