--- a/galeriaarte-web/src/main/webapp/src/modules/clientes/new/clientes.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/clientes/new/clientes.new.html
@@ -1,15 +1,5 @@
 <div class="container-fluid">
-    <div class="center-block well text-center" ng-if="isAuthenticated() && !hasPermissions()">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-12">
-                    <h1 class="float-left display-3 mr-4">403 Prohibido</h1>
-                    <h4 >No tiene permisos para esta acción.</h4>
-                    <p >Contactese con el administrador para obtener permisos.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="center-block well text-center" ng-show="isAuthenticated() && !hasPermissions()"></div>
     <div class="panel-group" ng-show="isAuthenticated() && hasPermissions()">
         <div class="panel panel-primary">
             <div class="panel-heading"><label ng-if="!edit" id="createCliente">Create new Cliente</label>
