Relacion Comentario Obra

--- a/galeriaarte-web/src/main/webapp/src/modules/comentarios/new/comentarios.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/comentarios/new/comentarios.new.html
@@ -11,12 +11,12 @@
                             <input id="comentarioContenido" required ng-model="comentarioContenido" class="col-sm-6"/>
                         </div>
                     </div>
-                    <div class="form-group row">
+<!--                    <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="comentarioClienteId" class="col-sm-2">Id cliente:</label>
                             <input id="comentarioClienteId" required ng-model="comentarioClienteId" class="col-sm-6"/>
                         </div>
-                    </div>
+                    </div>-->
                     <div ng-if="edit" class="panel-group" id="theClientes">
                         <div class="panel panel-info">
                             <div class="panel-heading">Associated clientes</div>
