--- a/galeriaarte-web/src/main/webapp/src/modules/comentarios/comentarios.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/comentarios/comentarios.list.html
@@ -5,7 +5,7 @@
             <div class="panel-body">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group mr-2" role="group" aria-label="First group">
-                        <a class="btn btn-info" ui-sref="comentarioCreate"><span class="glyphicon glyphicon-plus-sign"></span> Add new comentario</a>
+                        <a class="btn btn-info" ui-sref="comentarioCreateObra({obraId: currentObra.id})"><span class="glyphicon glyphicon-plus-sign"></span> Comentar</a>
                     </div>
                 </div>
                 <div class="col-md-8">
