--- a/galeriaarte-web/src/main/webapp/src/modules/compras/new/compras.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/compras/new/compras.new.html
@@ -9,7 +9,7 @@
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="valor" class="col-sm-2">Valor:</label>
-                            <input id="valor" required ng-model="valor" class="col-sm-6"/>
+                            <input type="text" style="" id="valor" required ng-model="valor" class="col-sm-6" >
                         </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
@@ -41,23 +41,17 @@
                             </div>
                         </div>
                     </div>
+                </form>
 
             <div class="panel-heading"><label ng-if="!edit" id="createCompra">Crear nueva compra</label>
                 <label ng-if="edit" id="editCompra">Editar compra</label></div>
             <div class="panel-body">
                 <form ng-submit="createCompra()" name="blog">
 
-                    <div class="form-group row">
-                        <div class="form-group col-sm-4" ng-if="!compra.$valid">
-
-                            <div class="alert alert-warning" >
-                                <strong>Warning!</strong><p>All inputs are required*</p>
-                            </div> 
-                        </div> 
-                    </div> 
+                   
                     <div class="form-group row">
                         <div class="form-group col-sm-12">
-                            <input ng-show="compra.$valid" type="submit" value="Save" class="btn btn-success"/>
+                            <input  type="submit" value="Save" class="btn btn-success"/>
                             <a class="btn btn-info" ui-sref="comprasList">Cancel</a>
                         </div>
                     </div>
@@ -65,5 +59,8 @@
 
             </div>
         </div>
+                    
     </div>
 </div>
+    </div>
+    </div>
