--- a/galeriaarte-web/src/main/webapp/index.html
+++ b/galeriaarte-web/src/main/webapp/index.html
@@ -104,7 +104,7 @@
                     <img src="resources/images/Kadda.jpg" alt="logo" class="img-responsive logo"/>
                 </div>
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Galería de Arte Kadda</a>
+                    <a class="navbar-brand" href="#"><b  style="font-size: 22px; color: black">Galería de Arte Kadda</b></a>
                 </div>
                     <ul ng-if="!isAuthenticated()" class="nav navbar-nav navbar-right">
                         <li><a ui-sref="login"><span class="glyphicon glyphicon-user"></span> Login</a></li>
@@ -123,7 +123,7 @@
                     <br>
                     <br>
                     <ul class="nav nav-pills nav-stacked">
-                        <li style="background-color: white ; opacity: 0.5 "><a ui-sref="artistasList"><span class="glyphicon glyphicon-home" style="color: black ; opacity: 1.0 "></span><font color="black" style="font-size: 20px ; opacity: 1.0 "> Página principal</font> </a></li> <!--Mejorar porque esta conectado con ARTISTA y no debería ser así.--> 
+                        <li style="background-color: white "><a href="#"><span class="glyphicon glyphicon-home" style="color: black ; opacity: 1.0 "></span><font color="black" style="font-size: 20px ; opacity: 1.0 "> Página principal</font> </a></li> <!--Mejorar porque esta conectado con ARTISTA y no debería ser así.--> 
                         <li style="background-color: white"><a ui-sref="catalogosList"><span class="glyphicon glyphicon-book" style="color: black"></span><font color="black"black; opacity: 1 style="font-size: 20px"> Catálogos</font> </a></li>
                          <li style="background-color:white"><a ui-sref="obrasList"><span class="glyphicon glyphicon-picture" style="color: black"></span><font color="black" style="font-size: 20px"> Obras</font> </a></li>
                         <li style="background-color: white"><a ui-sref="artistasList"><span class="glyphicon glyphicon-user" style="color: black"></span> <font color="black" style="font-size: 20px"> Artistas</font> </a></li>
