--- a/galeriaarte-web/src/main/webapp/src/modules/catalogos/delete/catalogo.delete.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/catalogos/delete/catalogo.delete.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <div class="center-block well text-center">
-    <h1>¿Está seguro que desea eliminar el catálogo?</h1>
-    <button id="confirm-delete" ng-click="deleteCatálogo()" class="btn btn-danger">Eliminar</button>
-    <a id="cancel-delete" ui-sref="blogsList" class="btn btn-info">Cancelar</a>
+    <div ng-if="isAuthenticated() && hasPermissions()"><h3>¿Está seguro?</h3>
+        <button id="confirm-delete" ng-click="deleteCatalogo()" class="btn btn-danger">Borrar</button>
+        <a id="cancel-delete" ui-sref="catalogosList" class="btn btn-info">Cancelar</a>
+    </div>
+    <div class="container" ng-if="isAuthenticated() && !hasPermissions()">
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <h1 class="float-left display-3 mr-4">403 Prohibido</h1>
+                <h4 >No tiene los permisos necesarios para realizar la acción.</h4>
+                <p >Contactese con el administrador para pedir permiso.</p>
+            </div>
+        </div>
+    </div>
 </div>
