--- a/galeriaarte-web/src/main/webapp/src/modules/comentarios/new/comentarios.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/comentarios/new/comentarios.new.html
@@ -47,7 +47,7 @@
                     <div class="form-group row">
                         <div class="form-group col-sm-12">
                             <input ng-show="comentario.$valid" type="submit" value="Save" class="btn btn-success"/>
-                            <a class="btn btn-info" ui-sref="obraDetail">Cancel</a>
+                            <a class="btn btn-info" ui-sref="obrasList">Cancel</a>
                         </div>
                     </div>
                 </form>
